--- a/gen.html
+++ b/gen.html
@@ -15,12 +15,28 @@
            white-space: -o-pre-wrap; / Opera 7 /
            Word-wrap: break-word; / Internet Explorer 5.5+ */
         }
+
+        .popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #222;
+            width: 100%;
+            height: 100%;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            overflow: scroll;
+            flex-direction: column;
+        }
     </style>
 
     <script type="text/javascript" src="vue2.7.js"></script>
     <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="model.js"></script>
+    <script type="text/javascript" src="model2.js"></script>
     <script src="jspdf.min.js"></script>
     <!--    <script src="font-han-sans.js"></script>-->
     <script src="font-simsun-normal.js"></script>
@@ -69,7 +85,8 @@
             <div class="col">
                 <div style="display: flex;flex-direction: row;height: 48px;justify-content: center;text-align: center; line-height: 48px">
                     <h4 algin="center">选择模版</h4>
-                    <a href="config.html" style="margin-left: 15px;">配置模版</a>
+                    <a href="config.html" style="margin-left: 15px;" target="_blank">配置模版</a>
+                    <a href="config2.html" style="margin-left: 15px;" target="_blank">配置小节</a>
                 </div>
                 <div class="card border-info bg-light"
                      style="margin-top: 25px;border-radius:25px;padding: 1.5% 3% 1.5% 3%">
@@ -81,22 +98,27 @@
                                 <div style="display: flex;flex-direction: row" v-if="obj">
                                     <div style="display: flex;flex-direction: column;width: 84%">
                                         <span style="font-size: 22px;color:black;font-weight: 400;line-height: 23px;">
-                                        {{ obj.title }}
+                                            {{ obj.contentCode +"：" + obj.title }}
                                         </span>
                                         <span style="margin-top: 10px">内容模版:</span>
                                         <select v-model="obj.selected" @change="selectOption" style="width: 100%">
                                             <option v-for="(option, index) in obj.contents" :key="index" :value="index"
                                                     style="height: auto">
-                                                {{ option }}
+                                                {{ (index+1) +". "+ option }}
                                             </option>
                                         </select>
                                     </div>
+                                    <button type="button" class="btn btn-block btn-primary"
+                                            @click="openPopup(obj)"
+                                            style="width: 14%;border-radius:15px;margin-left:2%;margin-top:15px;margin-bottom:15px;">
+                                        配置
+                                    </button>
+
                                     <button type="button" class="btn btn-block"
                                             :class="[(obj.inUse) ? 'btn-danger' : 'btn-primary']" @click="useModel(obj)"
                                             style="width: 14%;border-radius:15px;margin-left:2%;margin-top:15px;margin-bottom:15px;">
                                         {{ (obj.inUse) ? "移除" : "使用" }}
                                     </button>
-
                                 </div>
 
                             </div>
@@ -136,6 +158,77 @@
                 </div>
             </div>
         </div>
+
+        <div id="popup" class="popup">
+            <span style="color: white;font-size: 25px;height: 25px;padding: 25px">自定义章节内容</span>
+            <div style="display: flex;flex-direction: row;height: 48px; line-height: 48px">
+                <button type="button" style="margin-left: 25px"
+                        onclick="confirConfig2()">确定
+                </button>
+                <button type="button" style="margin-left: 25px"
+                        onclick="closePopup()">关闭
+                </button>
+            </div>
+            <div class="row" style="padding-top: 25px;text-align: left">
+                <div class="col">
+                    <div style="display: flex;flex-direction: row;height: 48px;justify-content: center;text-align: center; line-height: 48px">
+                        <h4 algin="center">选择小节模版</h4>
+                    </div>
+                    <div class="card border-info bg-light"
+                         style="margin-top: 25px;border-radius:25px;padding: 1.5% 3% 1.5% 3%">
+                        <ul class="list-group" style="list-style: none;margin-top:0;padding:0%;">
+                            <li v-for="obj in availableLi2"
+                                style="margin-top: 1.5%;margin-bottom: 1.5%;padding:0">
+                                <div class="card"
+                                     style="border-radius:25px;padding: 16px;background: white">
+                                    <div style="display: flex;flex-direction: row" v-if="obj">
+                                        <div style="display: flex;flex-direction: column;width: 84%">
+                                        <span style="font-size: 22px;color:black;font-weight: 400;line-height: 23px;">
+                                            {{ obj.contentCode +"：" + obj.title }}
+                                        </span>
+                                            <span style="margin-top: 10px">内容模版:</span>
+                                            <span style="margin-top: 10px">{{obj.content.substring(0,25)}}</span>
+                                        </div>
+                                        <button type="button" class="btn btn-block btn-primary"
+                                                @click="useModel2(obj)"
+                                                style="width: 14%;border-radius:15px;margin-left:2%;margin-top:15px;margin-bottom:15px;">
+                                            使用
+                                        </button>
+                                    </div>
+
+                                </div>
+
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div style="display: flex;flex-direction: row;height: 48px;justify-content: center;text-align: center; line-height: 48px">
+                        <h4 style="align-content: center">结果预览</h4>
+                    </div>
+                    <div id="resultLi2" class="card"
+                         style="background-color:white;margin-top: 25px;border-radius:25px;padding:16px;"
+                         v-if="retLi2.length>0">
+                            <span style="font-size: 22px;color:black;font-weight: 400;line-height: 23px;">
+                                {{ customChapter.title }}
+                            </span>
+                        <ul style="list-style: none;margin-top:0;padding-top:0;">
+                            <li v-for="(obj,i) in retLi2" style="padding-top: 16px;padding-bottom: 16px">
+                                <div style="display: flex;flex-direction: row" v-if="obj">
+                                    <div style="display: flex;flex-direction: column;">
+                                        <pre style="margin-top: 15px; white-space: pre-wrap;max-width: 700px">{{
+                                            formatTitle2(i, obj.title)+"\n"+formatModel(obj.content)
+                                        }}</pre>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 </div>
@@ -145,7 +238,11 @@
         el: "#app",
         data: {
             models: [],
+            models2: [],
             retLi: [],
+            retLi2: [],
+            customChapter: null,
+            availableLi2: [],
             selected: -1,
             name: "XX项目",
             address: "成都市",
@@ -167,6 +264,9 @@
                 }
                 model.inUse = !model.inUse
             },
+            useModel2: function (model) {
+                this.retLi2.push(model)
+            },
             formatTitle: function (i, title) {
                 if (i < 10) {
                     return first + arr[i] + end + title
@@ -181,6 +281,21 @@
                     return first + ten + arr[low] + end + title
                 }
                 return first + arr[high - 1] + ten + arr[low] + end + title
+            },
+            formatTitle2: function (i, title) {
+                if (i < 10) {
+                    return first + arr[i] + end2 + title
+                }
+                var high = Math.floor(i / 10)
+                var low = i % 10
+                console.log("ten:" + high + " Low: " + low)
+                if (low === 9) {
+                    return first + arr[high] + ten + end2 + title
+                }
+                if (high === 1) {
+                    return first + ten + arr[low] + end2 + title
+                }
+                return first + arr[high - 1] + ten + arr[low] + end2 + title
             },
             formatModel: function (content) {
                 var ret = content
@@ -483,12 +598,38 @@
     } else {
         app.models = JSON.parse(cacheStr);
     }
+    // 小节
+    var cacheStr2 = localStorage.getItem('models2')
+    if (cacheStr2 == null || cacheStr2.length === 0) {
+        app.models2 = configModels2
+    } else {
+        app.models2 = JSON.parse(cacheStr2);
+    }
+    var sortFunc = function (a, b) {
+        if (typeof a.contentCode !== 'string' || typeof b.contentCode !== 'string') {
+            return 1;
+        }
+        var fieldA = a.contentCode.toLowerCase(); // 将字段转换为小写以进行不区分大小写的排序
+        var fieldB = b.contentCode.toLowerCase(); // 将字段转换为小写以进行不区分大小写的排序
+
+        // 使用 localeCompare 进行字符串的比较
+        if (fieldA < fieldB) {
+            return -1;
+        }
+        if (fieldA > fieldB) {
+            return 1;
+        }
+        return 0; // 相等的情况
+    };
+    app.models = app.models.sort(sortFunc);
+    app.models2 = app.models2.sort(sortFunc);
     // console.log("Vue:" + JSON.stringify(models))
 
     const arr = ["一", "二", "三", "四", "五", "六", "七", "八", "九", "十"]
     const first = "第"
     const ten = "十"
     const end = "章  "
+    const end2 = "节  "
 
 
     //加载状态为complete时移除loading效果
@@ -499,6 +640,49 @@
 
     //监听加载状态改变
     document.onreadystatechange = completeLoading;
+
+    function openPopup(obj) {
+        if (typeof obj.contentCode !== "string") {
+            alert("无可用配置");
+            return;
+        }
+        app.customChapter = obj;
+        var checkStr = obj.contentCode.substring(0, obj.contentCode.indexOf("_"));
+        if (checkStr === null || checkStr.length < 1) {
+            alert("无可用配置");
+            return;
+        }
+        app.availableLi2 = app.models2.filter(function (subcontent) {
+            return subcontent.contentCode.indexOf(checkStr) > -1;
+        });
+        if (app.availableLi2 == null || app.availableLi2.length < 1) {
+            alert("无可用配置");
+            return;
+        }
+        var popup = document.getElementById('popup');
+        popup.style.display = 'flex';
+    }
+
+    function closePopup() {
+        var popup = document.getElementById('popup');
+        popup.style.display = 'none';
+        app.retLi2 = [];
+    }
+
+    function confirConfig2() {
+        if (app.retLi2.length > 0) {
+            var content = "";
+            for (let i = 0; i < app.retLi2.length; i++) {
+                content += "{#" + app.formatTitle2(i, app.retLi2[i].title) + "}\n";
+                content += app.retLi2[i].content + "\n";
+            }
+            app.customChapter.contents.unshift(content);
+            app.customChapter.selected = 0;
+        }
+        document.getElementById('popup').style.display = 'none';
+        app.retLi2 = [];
+    }
+
 </script>
 
 </body>
