--- a/config2.html
+++ b/config2.html
@@ -209,7 +209,7 @@
         var inputName = document.getElementById("inputName").innerHTML.trim()
         var contentCode = document.getElementById("contentCode").innerHTML.trim()
         if (inputName == null || inputName.length === 0) {
-            alert("请输入章节名称")
+            alert("请输入节名称")
             return
         }
         var ret = -1
@@ -221,9 +221,7 @@
                 break;
             }
         }
-        var content = ""
-        var input = document.getElementById("input1").innerHTML
-        content = input
+        var content = document.getElementById("input1").innerHTML.replaceAll("<br>", "\n") + "\n\n"
         console.log("inList: " + inList)
         if (inList) {
             app.models2[ret].title = inputName
