1. 文案修改，支持通用模版

--- a/gen.html
+++ b/gen.html
@@ -85,8 +85,8 @@
             <div class="col">
                 <div style="display: flex;flex-direction: row;height: 48px;justify-content: center;text-align: center; line-height: 48px">
                     <h4 algin="center">选择模版</h4>
-                    <a href="config.html" style="margin-left: 15px;" target="_blank">配置模版</a>
-                    <a href="config2.html" style="margin-left: 15px;" target="_blank">配置小节</a>
+                    <a href="config.html" style="margin-left: 15px;" target="_blank">配置章模版</a>
+                    <a href="config2.html" style="margin-left: 15px;" target="_blank">配置节模版</a>
                 </div>
                 <div class="card border-info bg-light"
                      style="margin-top: 25px;border-radius:25px;padding: 1.5% 3% 1.5% 3%">
@@ -642,7 +642,7 @@
             return;
         }
         app.availableLi2 = app.models2.filter(function (subcontent) {
-            return subcontent.contentCode.indexOf(checkStr) > -1;
+            return subcontent.contentCode.indexOf(checkStr) > -1 || subcontent.contentCode.indexOf('TY' + checkStr.substring(2)) > -1;
         });
         if (app.availableLi2 == null || app.availableLi2.length < 1) {
             alert("无可用配置");
