--- a/config.html
+++ b/config.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>配置模版</title>
+    <title>配置章模版</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="only-if-cached">
@@ -43,7 +43,7 @@
 <body>
 <div id="app">
     <div class="container-fluid p-5 bg-light text-black text-center">
-        <h4 style="align-content: center">配置模版</h4>
+        <h4 style="align-content: center">配置章模版</h4>
         <div style="display: flex;flex-direction: row;justify-content: center;text-align: center; line-height: 48px">
 
             <button type="button" class="btn btn-warning"
@@ -230,7 +230,7 @@
         var inputName = document.getElementById("inputName").innerHTML.trim()
         var contentCode = document.getElementById("contentCode").innerHTML.trim()
         if (inputName == null || inputName.length === 0) {
-            alert("请输入章节名称")
+            alert("请输入章名称")
             return
         }
         var ret
