--- a/gen.html
+++ b/gen.html
@@ -49,6 +49,8 @@
 <div id="app">
     <div class="container-fluid p-5 bg-light text-black text-center">
         <h1>施工组织设计生成</h1>
+        <a href="使用说明.md" style="margin: 15px;" target="_blank">使用说明</a>
+
         <div class="row text-center" style="margin-top: 28px">
             <div class="input-group mb-2" style="width: 50%">
                 <span class="input-group-text">项目名称：</span>
