1. 更新使用说明 2. 保留节内容头部空格符 3. 调整表格字体，节标题间距

--- a/config2.html
+++ b/config2.html
@@ -221,7 +221,7 @@
                 break;
             }
         }
-        var content = document.getElementById("input1").innerHTML.replaceAll("<br>", "").trim()
+        var content = document.getElementById("input1").innerHTML.replaceAll("<br>", "").trimEnd()
         console.log("inList: " + inList)
         if (inList) {
             app.models2[ret].title = inputName
